tempfile/auto_impl/tests/compile-fail/attr_on_struct.rs
use auto_impl::auto_impl;


#[auto_impl(&, &mut)]
struct Foo {
    x: usize,
    bar: String,
}


fn main() {}
