tempfile/auto_impl/tests/compile-fail/attr_on_struct.stderr
error: expected `trait`
 --> tests/compile-fail/attr_on_struct.rs:5:1
  |
5 | struct Foo {
  | ^^^^^^
